[gd_scene load_steps=4 format=3 uid="uid://c4lejrw3cexiu"]

[ext_resource type="Script" uid="uid://brod6jhk1ibj8" path="res://UI/upgrade_menu.gd" id="1_b1awm"]
[ext_resource type="Theme" uid="uid://mxw65pyn6hxu" path="res://UI/menuStyles.tres" id="2_f4tld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0gn4"]
bg_color = Color(0.0728426, 0.0728426, 0.0728426, 1)

[node name="UpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1awm")

[node name="UpgradeBackground" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -156.0
offset_right = 192.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o0gn4")

[node name="MarginContainer" type="MarginContainer" parent="UpgradeBackground"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="UpgradeVBox" type="VBoxContainer" parent="UpgradeBackground/MarginContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 5
alignment = 1

[node name="PauseTitle" type="RichTextLabel" parent="UpgradeBackground/MarginContainer/UpgradeVBox"]
layout_mode = 2
theme = ExtResource("2_f4tld")
bbcode_enabled = true
text = "[center]Choose an Upgrade[/center]"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeBackground/MarginContainer/UpgradeVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UpgradeBackground/MarginContainer/UpgradeVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Upgrade1" type="Button" parent="UpgradeBackground/MarginContainer/UpgradeVBox/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_f4tld")
text = "1"

[node name="MarginContainer2" type="MarginContainer" parent="UpgradeBackground/MarginContainer/UpgradeVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Upgrade2" type="Button" parent="UpgradeBackground/MarginContainer/UpgradeVBox/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_f4tld")
text = "2"
